# recipe-api

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: calc.py  settings.py  tests.py
